Project latinaintechbot {
    database_type: 'SQLite'
    Note: 'Progetto relativo alla creazione del bot della community LatinaInTech'
}

Table events {
    id UUID [pk, not null]
    name string [not null]
    description string
    date datetime [not null]
    start_time string [not null]
    start_end string [not null]
    location string [not null]
    link string [not null]
    created_by int [not null, note: 'Telegram User ID of the user who created the event']
    created_at datetime [not null, default: `now()`]
    updated_at datetime
    deleted_at datetime
}

Table job_categories {
    id int [primary key, not null, unique, increment]
    name string [not null, unique]
    Note: 'Back-end, Front-end, Machine Learning & AI'
}

Table contract_types {
    id int [primary key, not null, unique, increment]
    name string [not null, unique]
    Note: 'Determinato, Indeterminato'
}

Table jobs {
    id UUID [pk, not null]
    contract_type_id int [not null, ref: > contract_types.id]
    category_id int [not null, ref: > job_categories.id]
    position string [not null, note: 'Software Engineer']
    description string [not null]
    link string
    ral int
    created_by int [not null, note: 'Telegram User ID of the user who created the job offer']
    created_at datetime [not null, default: `now()`]
    updated_at datetime
    deleted_at datetime
}

Table user_roles {
    id int [pk, not null, increment]
    name string [not null, note: 'User, Moderator, Administrator']
}

Table users {
    id UUID [pk, not null]
    first_name string [not null]
    last_name string [not null]
    username string [unique]
    telegram_id int [not null, unique, note: 'Telegram ID of the user']
    role_id int [not null, ref: > user_roles.id]
    created_at datetime [not null, default: `now()`]
    updated_at datetime
    deleted_at datetime
}
